z-index fixed

--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ input[type="file"] {
 
 #image-preview {
     width: 40px;
-    z-index: 10000;
+    z-index: 1;
 }
 
 #tags-container {
